2012-09-XX Moreno Marzolla <marzolla@cs.unibo.it>

	* Version 1.1.2 released
	* Restructured the documentation
	* Fixed function qncmva()
	* Reduced space requirement for qnclosedsinglemva() when
	  there are no LD servers
	* qnclosedsingleab() added
	* qnclosedmultiab() added
	* Changed interface for qnclosedab()
	* qnclosedsinglebsb() added
	* Stub for qnclosedmultibsb() added
	* Changed interface for qnclosedbsb()

2012-09-08 Moreno Marzolla <marzolla@cs.unibo.it>

	* Version 1.1.1 released
	* Increased tolerance in tests for dtmc_fpt and dtmc_mtta
	* Disabled autoloading of this package on Octave startup

2012-04-05 Moreno Marzolla <marzolla@cs.unibo.it>

	* Version 1.1.0 released
	* Fixed bug in qnvisits() which made the function behave incorrectly
	  under particular degenerate cases.
	* Fixed bug in ctmc_exps() (wrong initial value in call to lsode)
	* ctmc_exps() can now also compute the expected sojourn time
	  until absorption for absorbing CTMCs.
	* ctmc_exps() and ctmc_taexps() accept a scalar as second
	  argument; the old syntax is still supported, but may be deprecated
	  in future releases.
	* ctmc_bd() now returns the infinitesimal generator matrix
	  of the birth-death process, not the steady-state solution.
	* ctmc_bd_solve() (which was deprecated) has been removed
	* ctmc_solve() (which was deprecated) has been removed
	* dtmc_solve() (which was deprecated) has been removed
	* dtmc_bd() added
	* ctmc_check_Q() added
	* dtmc_mtta() added
	* dtmc_exps() added
	* dtmc_taexps() added
	* Miscellaneous fixes/improvements to the documentation

2012-02-04 Moreno Marzolla <marzolla@cs.unibo.it>

	* Version 1.0.0 released under the name "queueing" (initial
	  contribution to octave-forge)
	* The documentation has been updated to reflect the new package name
	* Some minor code cleanup

2012-01-19 Moreno Marzolla <marzolla@cs.unibo.it>

	* Version 0.8.11 released