@@ -17,59 +17,31 @@
 
 ## -*- texinfo -*-
 ##
-## @deftypefn {Function File} {[@var{Xu}, @var{Rl}] =} qnopenab (@var{lambda}, @var{D})
+## @deftypefn {Function File} {[@var{Xu}, @var{Rl}] =} qnopenab (@var{lambda}, @dots{} )
 ##
 ## @cindex bounds, asymptotic
 ## @cindex open network
 ##
-## Compute Asymptotic Bounds for single-class, open Queueing Networks
-## with @math{K} service centers.
+## Compute Asymptotic Bounds for open networks with single or multiple classes of customers.
 ##
-## @strong{INPUTS}
+## This function dispatches the computation to @code{qnopensingleab} or @code{qnopenmultiab}.
 ##
-## @table @var
-##
-## @item lambda
-## overall arrival rate to the system (scalar). Abort if
-## @code{@var{lambda} @leq{} 0}
-##
-## @item D
-## @code{@var{D}(k)} is the service demand at center @math{k}.
-## The service demand vector @var{D} must be nonempty, and all demands
-## must be nonnegative (@code{@var{D}(k) @geq{} 0} for all @math{k}).
-##
-## @end table
-##
-## @strong{OUTPUTS}
-##
-## @table @var
-##
-## @item Xu
-## Upper bound on the system throughput.
-##
-## @item Rl
-## Lower bound on the system response time.
-##
-## @end table
-##
-## @seealso{qnopenbsb}
+## @seealso{qnopensingleab, qnopenmultiab}
 ##
 ## @end deftypefn
 
 ## Author: Moreno Marzolla <marzolla(at)cs.unibo.it>
 ## Web: http://www.moreno.marzolla.name/
 
-function [X_upper R_lower] = qnopenab( lambda, D )
-  if ( nargin != 2 )
+function [X_upper R_lower] = qnopenab( lambda, varargin )
+  if ( nargin < 1 )
     print_usage();
   endif
-  ( isscalar(lambda) && lambda > 0 ) || \
-      error( "lambda must be a positive scalar" );
-  ( isvector(D) && length(D)>0 && all( D>=0 ) ) || \
-      error( "D must be a vector of nonnegative scalars" );
-
-  X_upper = 1/max(D);
-  R_lower = sum(D);
+  if ( isscalar(lambda) )
+    [X_upper R_lower] = qnopensingleab(lambda, varargin{:} );
+  else
+    [X_upper R_lower] = qnopenmultiab(lambda, varargin{:} );
+  endif
 endfunction
 
 %!test
